@@ -15,8 +15,9 @@
         /// <param name="method">The method.</param>
         /// <param name="messageBinder">The method binder.</param>
         /// <param name="filters">The filters.</param>
-        public SynchronousAction(IMethod method, IMessageBinder messageBinder, IFilterManager filters)
-            : base(method, messageBinder, filters) {}
+        /// <param name="blockInteraction">if set to <c>true</c> blocks interaction.</param>
+        public SynchronousAction(IMethod method, IMessageBinder messageBinder, IFilterManager filters, bool blockInteraction)
+            : base(method, messageBinder, filters, blockInteraction) {}
 
         /// <summary>
         /// Executes the specified this action on the specified target.
@@ -28,6 +29,8 @@
         {
             try
             {
+                TryUpdateTrigger(actionMessage, handlingNode, true);
+
                 var parameters = _messageBinder.DetermineParameters(
                     actionMessage,
                     _requirements,
@@ -37,7 +40,11 @@
 
                 foreach (var filter in _filters.PreProcessors)
                 {
-                    if (!filter.Execute(actionMessage, handlingNode, parameters)) return;
+                    if (filter.Execute(actionMessage, handlingNode, parameters))
+                        continue;
+
+                    TryUpdateTrigger(actionMessage, handlingNode, false);
+                    return;
                 }
 
                 var outcome = new MessageProcessingOutcome(
@@ -55,17 +62,20 @@
             }
             catch (Exception ex)
             {
+                TryUpdateTrigger(actionMessage, handlingNode, false);
                 if(!TryApplyRescue(actionMessage, handlingNode, ex))
                     throw;
                 OnCompleted();
             }
         }
 
-        private void HandleOutcome(IRoutedMessageWithOutcome message, IInteractionNode handlingNode, MessageProcessingOutcome outcome)
+        private void HandleOutcome(ActionMessage message, IInteractionNode handlingNode, MessageProcessingOutcome outcome)
         {
             var result = _messageBinder.CreateResult(outcome);
 
             result.Completed += (r, ex) =>{
+                TryUpdateTrigger(message, handlingNode, false);
+
                 if(ex != null)
                 {
                     if(!TryApplyRescue(message, handlingNode, ex))
